fix(style): fix spacing between tag and article in follow tag feed

--- a/src/views/Follow/FollowFeed/TagsFeed/styles.css
+++ b/src/views/Follow/FollowFeed/TagsFeed/styles.css
@@ -2,7 +2,7 @@
   @mixin flex-center-start;
 
   width: 100%;
-  margin-bottom: var(--spacing-loose);
+  margin-bottom: var(--spacing-base);
 
   & span {
     margin-left: var(--spacing-x-tight);
